# mass-driver-plugins

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  latest.bundle  mdplugin.bundle  mdplugin2.bundle  pyproject.toml
docs/source/: architecture.md  conf.py  index.rst
src/mass_driver_plugins/: cli.py  jsonpatch.py  poetry.py  poetry_surgical.py  surgical.py  template.py
tests/: __init__.py  test_drivers.py  test_jsonpatch.py  test_mass_driver_plugins.py  test_surgical.py  test_template.py
tests/test_drivers/jsonpatch/: README.md  migration.toml
tests/test_drivers/poetry/: README.md  migration.toml  output.txt
tests/test_drivers/surgical/: migration.toml  output.txt
tests/test_jsonpatch/: migration_json.toml  migration_toml.toml  migration_yaml.toml  template_migration.toml
tests/test_jsonpatch/sample_repo/: README.md  sample.json  sample.toml  sample.yaml
tests/test_surgical/: surgical_migration.toml
tests/test_surgical/sample_repo/: README.md  bad.yaml
tests/test_template/: template_migration.toml
tests/test_template/sample_repo/: README.md  template_repo.csv
